objects/Fee__c.object
<CustomObject>
    <description>Standard fees for activities.</description>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <description>This is the type of activity, like hiking, kayaking, cycling, etc</description>
        <inlineHelpText>This is the type of activity, like hiking, kayaking, cycling, etc</inlineHelpText>
        <label>Activity Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Amount of fee for this activity</description>
        <inlineHelpText>Amount of fee for this activity</inlineHelpText>
        <label>Fee Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The date in which this fee will go into effect.</description>
        <inlineHelpText>Enter the date in which this fee will go into effect.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes related to this fee</description>
        <inlineHelpText>Notes related to this fee</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <label>Fee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Activity_Type__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Amount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>F-{000}</displayFormat>
        <label>Fee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>